pre work module 3 assignment

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Doug McIntosh</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi, My name is Doug</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>St. Louis MO.  moved to Seattle in 2005 for a job with T-Mobile.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I used to spend a lot of time playing the drums and checking out music in general, but not so much these days.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I was asked that question in an interview 10+ years ago at AT&T.  I told them my dream job would be to play drums with Led Zeppelin or 'Earth, Wind, and Fire'.  got some good laughs from that one.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Shoreline</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I was really bored with my current job and my skillset is quickly becoming obsolete.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/JackManu">Github</a></li>
         </ul>
     </footer>
 </body>
